[gd_scene load_steps=5 format=3 uid="uid://bsetdbcop2wtx"]

[ext_resource type="Script" uid="uid://cxtgptnc8y7ng" path="res://scripts/HUD/TimerSprite.gd" id="1_47avs"]
[ext_resource type="Texture2D" uid="uid://ccvxtnlyoixt6" path="res://sprites/progress_bar_textures/timer/timer-under-33x32.png" id="2_e3jqs"]
[ext_resource type="Texture2D" uid="uid://d4mjqjvtnrrc0" path="res://sprites/progress_bar_textures/timer/timer-progress-33x32.png" id="3_q70ap"]
[ext_resource type="AudioStream" uid="uid://dhoym8a4aa727" path="res://audio/sfx/timer.wav" id="4_ngkbe"]

[node name="timer_sprite" type="Node2D"]
script = ExtResource("1_47avs")

[node name="progress_bar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_right = 33.0
offset_bottom = 32.0
max_value = 30.0
value = 30.0
fill_mode = 4
texture_under = ExtResource("2_e3jqs")
texture_progress = ExtResource("3_q70ap")

[node name="TimerSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ngkbe")
bus = &"Sfx"

[connection signal="value_changed" from="progress_bar" to="." method="_on_progress_bar_value_changed"]
